# glyph-mi

./: .gitignore  CHANGELOG.md  GUIDE.ru.md  LICENSE  README.md  REPO.md  ROADMAP.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
core/: index.js  ollama.js  tokenize.js
docs/: index.html
glyph_mi/: __init__.py  analyze.py  spectral.py
js/: duplicates.js  index.js  pipeline.js
js/core/: glyph-onnx.js  knn-ipc.js  ml-heuristic.js  ollama.js
js/modules/cultiva/: index.js  manifest.json
js/modules/notes/: index.js  manifest.json  pipeline.js
js/modules/senza/: index.js
js/providers/: local-agent.js  mi.js  rules.js
js/universal/: contracts.js  engine.js
knowledge/public/: cultiva-foundation-v1.json  heuristics-v1.json
models/: README.md
scripts/: train-glyph-genre.py
test/: batch.test.js  contracts.test.js  knn-ipc.test.js  npm-pack.test.js  onnx-align.test.js  pipeline.test.js
