[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-mi"
version = "2.7.0"
description = "Glyph MI 2.7 — universal metadata intelligence core with modular product adapters"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "krwg" }]
dependencies = []

[project.optional-dependencies]
spectral = ["librosa>=0.10", "numpy>=1.24"]

[project.scripts]
glyph-mi = "glyph_mi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["glyph_mi*"]
